OpenSLP Change Log (stable-1-0)
-------------------------------
Please make entries to this log (in addition to the CVS log) that describe 
major changes to the OpenSLP code base.  An entries should be separated by
blank lines and include the date, developer's email, and change description.
=============================================================================

11/1/01 matt@caldera.com
Honor scopes in SrvRqsts for the special "service:directory-agent" type

10/31/01 matt@caldera.com
Fixed problem with SLPEscape() as patched by Timothy Zurcher

*** Tag OpenSLP-1.0.4 ***

10/18/01 matt@caldera.com
Added code to use IP address in agent url for those operating systems where
gethostname() does not return a fully qualified domain name (FQDN).

10/17/01 matt@caldera.com
Applied patch from Tim Zurcher to fix memory realloc problems when messages 
exceed the SLP MTU of 1400 bytes.

10/17/01 matt@caldera.com
Fixed SEGV when operating with Mac OS/x which insists on sending corrupt
SLP messages.  Thanks to Ernie Stepson for reporting this problem.

10/16/01 matt@caldera.com
Added code to log parse errors and dump bad messages to the log

10/16/01 matt@caldera.com
Fixed parse error conditional in slpd message processing code where some bad
messages could cause SEGV of slpd.

10/16/01 matt@caldera.com
Fixed problem where libslp.so would loop tightly if SLPReg() and SLPDereg()
were called after previously contacted slpd had died.

10/15/01 matt@caldera.com
Fixed problem where empty message was sent when talking to more than
one statically configured DA.  Patch from Timothy Zurcher.

*** Tag OpenSLP-1.0.3 ***

10/09/01 matt@caldera.com
Fixed "srvdereg too long bug" discovered by Timothy Zurcher 

10/09/01 matt@caldera.com
Changed install script so that it does not erase existing configuration files

10/08/01 matt@caldera.com
Fixed reconnect code to be able to interoperate with inefficient DAs that
close the stream after each srvreg/srvack exchange.  The Mac OS/X DA is 