@@ -48,12 +48,41 @@
 /***************************************************************************/
 
 #include <string.h>
+#include <ctype.h>
 
 #include "slp_compare.h"
 
+
 #ifdef WIN32
-#define strncasecmp(string1, string2, n) strnicmp(string1, string2, n)
+#else
+#ifndef HAVE_STRNCASECMP
+int
+strncasecmp(const char *s1, const char *s2, size_t len)
+{
+    while ( *s1 && (*s1 == *s2 || tolower(*s1) == tolower(*s2)) )
+    {
+        len--;
+        if(len == 0) return 0;
+        s1++;
+        s2++;
+    }
+    return(int) *(unsigned char *)s1 - (int) *(unsigned char *)s2;
+}
 #endif
+#ifndef HAVE_STRCASECMP
+int
+strcasecmp(const char *s1, const char *s2)
+{
+    while ( *s1 && (*s1 == *s2 || tolower(*s1) == tolower(*s2)) )
+    {
+        s1++;
+        s2++;
+    }
+    return(int) *(unsigned char *)s1 - (int) *(unsigned char *)s2;
+}
+#endif
+#endif 
+
 
 /*=========================================================================*/
 int SLPCompareString(int str1len,
