@@ -2,16 +2,9 @@
 #ifndef SLP_ATTR_H_INCLUDED
 #define SLP_ATTR_H_INCLUDED
 
+#include "../common/slp_compare.h"
 #include "../libslp/slp.h"
 #include <stdio.h>
-
-
-#ifdef WIN32
-#ifndef strncasecmp 
-    #define strncasecmp strnicmp
-#endif
-#endif
-
 
 #define SLP_TAG_BAD 300
 #define SLP_TAG_ERROR 400
